--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "i": "^0.3.7",
     "i18next": "^23.6.0",
+    "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "npm": "^10.2.4",
     "rc-resize-observer": "^1.4.0",
