--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@react-pdf/renderer": "^3.4.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,9 @@
     "apexcharts": "^3.45.1",
     "axios": "^1.6.1",
     "bootstrap": "^5.1.3",
+    "fs": "^0.0.1-security",
+    "html-to-react": "^1.7.0",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "i18next": "^23.6.0",
     "lottie-react": "^2.4.0",
