--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "i18next": "^23.6.0",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "npm": "^10.2.4",
