--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf/renderer": "^3.4.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
