--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.45.1",
     "axios": "^1.6.1",
+    "bcryptjs": "^2.4.3",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
