--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "cross-env": "^7.0.3",
+    "env-cmd": "^10.1.0",
     "tailwindcss": "^3.3.5"
   },
   "resolutions": {
