--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start:staging": "cross-env NODE_ENV=development env-cmd -f .env.development react-scripts --max_old_space_size=4096 start FAST_REFRESH=false",
+    "start:development": "cross-env NODE_ENV=development env-cmd -f .env.development react-scripts --max_old_space_size=4096 start FAST_REFRESH=false",
     "start:production": "cross-env NODE_ENV=production env-cmd -f .env.production react-scripts --max_old_space_size=4096 start FAST_REFRESH=false",
-    "start:development": "cross-env NODE_ENV=staging env-cmd -f .env.staging react-scripts --max_old_space_size=4096 start FAST_REFRESH=false",
-    "build:staging": "cross-env NODE_ENV=development env-cmd -f .env.development react-scripts --max_old_space_size=4096 build",
+    "start:staging": "cross-env NODE_ENV=staging env-cmd -f .env.staging react-scripts --max_old_space_size=4096 start FAST_REFRESH=false",
+    "build:development": "cross-env NODE_ENV=development env-cmd -f .env.development react-scripts --max_old_space_size=4096 build",
     "build:production": "cross-env NODE_ENV=production env-cmd -f .env.production react-scripts --max_old_space_size=4096 build",
-    "build:development": "cross-env NODE_ENV=staging env-cmd -f .env.staging react-scripts --max_old_space_size=4096 build",
+    "build:staging": "cross-env NODE_ENV=staging env-cmd -f .env.staging react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
