--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
     "react-pdf": "^7.6.0",
