--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-to-pdf": "^1.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
