--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "apexcharts": "^3.45.1",
     "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
